--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class="obj-width-limiter">
+<div class="obj-width-limiter" style="--logo-size: 6rem;">
   <div class="cmp-site-header">
     <a href="/" class="cmp-site-header__logo" rel="home" aria-hidden="true">
       <div class="cmp-logo">
@@ -7,15 +7,5 @@
         <div class="cmp-logo__diagonal"></div>
       </div>
     </a>
-    <div>
-      <h1 class="cmp-site-header__title">
-        <a href="/" class="cmp-site-header__link" rel="home" aria-label="{{ .Site.Title }}">Philip Zastrow</a>
-      </h1>
-      <p class="cmp-site-header__description" aria-label="Frontend Design Engineer, Web Accessibility Specialist, Writer, Speaker, et al.">
-        Frontend Design Engineer<br>
-        Web Accessibility Specialist<br>
-        Writer, Speaker, et al.
-      </p>
-    </div>
   </div>
 </div>
