--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/qhr8mld.css" />
   {{ $postcssopts := dict "use" "autoprefixer" }}
   {{ $style := resources.Get "style.scss" | resources.ToCSS | resources.PostCSS $postcssopts }}
-  <link rel="stylesheet" href="{{ $style.Permalink }}">
+  <link rel="stylesheet" href="{{ $style.Permalink | relURL }}">
   {{ $title := print .Site.Title " | " .Title }}
   {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
   <title>{{ $title }}</title>
