--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,7 +1,7 @@
 {{- $image := resources.Get "images/z.png" -}}
 <div class="cmp-about">
   <div class="cmp-about__image">
-    <img src="{{$image.Permalink}}" alt="" />
+    <img src="{{$image.RelPermalink}}" alt="" />
   </div>
   <div class="cmp-about__content">
     <h2 class="util-visually-hidden">About Me</h2>
