--- a/assets/components/_logo.scss
+++ b/assets/components/_logo.scss
@@ -8,17 +8,23 @@ $logo-diagonal: $logo-start + '<path d="M173.59 65.99a29.03 29.03 0 005.69-36.7L
   width: var(--logo-size);
   height: calc((200 / 184) * var(--logo-size));
   position: relative;
-  filter: 
-    drop-shadow(0 1rem 1rem rgba(0,0,0,0.5))
-    drop-shadow(0 2rem 4rem rgba(0,0,0,0.3));
   will-change: transform;
+  filter:
+    drop-shadow(0 -1px 0 hsla(0, 0%, 100%, 0.3))
+    drop-shadow(0 1px 0 hsla(0, 0%, 0%, 0.3))
+    drop-shadow(0 4px 8px hsla(0, 0%, 0%, 0.3));
 
-  @include color-mode(dark) {
-    filter:
-      drop-shadow(0 0.125rem 0.25rem rgba(0,0,0,0.75))
-      drop-shadow(0 0.5rem 1rem rgba(0,0,0,0.5));
+  &--shadow {
+    filter: 
+      drop-shadow(0 1em 1em rgba(0,0,0,0.5))
+      drop-shadow(0 2em 4em rgba(0,0,0,0.3));
+    @include color-mode(dark) {
+      filter:
+        drop-shadow(0 0.125em 0.25em rgba(0,0,0,0.75))
+        drop-shadow(0 0.5em 1em rgba(0,0,0,0.5));
+    }
+    
   }
-
   &__top,
   &__bottom,
   &__diagonal {
