feat: template types

--- a/assets/components/_footer.scss
+++ b/assets/components/_footer.scss
@@ -1,7 +1,15 @@
 .cmp-footer {
-  margin: var(--space-lg) auto var(--space-1xl);
+  width: 100%;
+  margin: var(--space-lg) auto calc(var(--space-lg) * 2);
   text-align: center;
-  
+
+  &--mask {
+    margin: var(--space-lg) auto 0;
+    padding: calc( var(--gradient-padding) * 2 ) 0 calc(var(--gradient-padding) * 0.5 ) ;
+    background-color: var(--color-background);
+    mask-image: linear-gradient(2deg, black 50%, rgba(black, 0.5) calc(50% + 1px), rgba(black, 0.5) calc(50% + 9px), transparent calc(50% + 10px));
+  }
+
   p {
     margin: 0;
     font-size: var(--font-sm);
