--- a/assets/elements/_body.scss
+++ b/assets/elements/_body.scss
@@ -1,4 +1,5 @@
 body {
+  margin: 0;
   background-color: var(--color-background);
   color: var(--color-text);
   font: 100% / 1.5 var(--sans-serif);
