--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,6 @@
-<footer class="cmp-footer">
-    <p>
-      <span aria-label="Copyright">&copy;</span> 2012<span aria-label=" through ">&ndash;</span>{{ now.Format "2006"}} Philip Zastrow. All rights reserved.
-    </p>
-    <p>Made in <a href="https://cottonbureau.com/products/ohio-4">oHIo</a></p>
-  </div>
+<footer class="cmp-footer{{ if ( ne .Kind "home") }} cmp-footer--mask{{ end }}">
+  <p>
+    <span aria-label="Copyright">&copy;</span> 2012<span aria-label=" through ">&ndash;</span>{{ now.Format "2006"}} Philip Zastrow. All rights reserved.
+  </p>
+  <p>Made in <a href="https://cottonbureau.com/products/ohio-4">oHIo</a></p>
 </footer>
