--- a/assets/object/_general.scss
+++ b/assets/object/_general.scss
@@ -14,6 +14,12 @@
   width: clamp(18rem, 95%, 60rem);
 }
 
+.obj-spacing-post {
+  & + & {
+    margin-top: calc(var(--gradient-padding) * 0.75);
+  }
+}
+
 .obj-content-width {
   margin: 0 auto;
   max-width: 80ch;
