--- a/assets/object/_gradient.css
+++ b/assets/object/_gradient.css
@@ -63,7 +63,7 @@
     0 0 0 2px hsl(0deg 0% 50% / 10%) inset,
     0 0 0 1px hsl(0deg 100% 100%) inset,
     0 0 2rem hsl(208deg 5% 85% / 50%) inset,
-    0 2rem 2rem -1rem hsla(0dge 0% 0% / 50%);
+    0 2rem 2rem -1rem hsla(0deg 0% 0% / 50%);
 
 
   @media (min-width: $md) {
