--- a/assets/components/_pie-chart.css
+++ b/assets/components/_pie-chart.css
@@ -6,6 +6,11 @@
     max-width: 100%;
     margin: 0;
   }
+
+  @supports not (container-type: inline-size) {
+    max-width: 100%;
+    margin: 0;
+  }
 }
 
 .cmp-pie-chart {
