--- a/assets/components/_article-card.css
+++ b/assets/components/_article-card.css
@@ -26,21 +26,25 @@
     padding: var(--space-sm) var(--space-md);
     color: var(--color-text);
     border-radius: var(--space-sm);
-    background-color: hsla(208, 5%, 100%, 0.8);
-    box-shadow: inset 0 0 0 0 hsla(320, 80%, 45%, 0.3), 0 0.5rem 1rem hsla(208, 5%, 0%, 0.1);
+    background-color: hsl(208deg 5% 100% / 80%);
+    box-shadow:
+      0 0 0 0 hsl(320deg 80% 45% / 30%) inset,
+      0 0.5rem 1rem hsl(208deg 5% 0% / 10%);
     will-change: opacity;
 
     transition: box-shadow var(--animation-duration) var(--animation-timing),
     color var(--animation-duration) var(--animation-timing);
 
     @media (prefers-color-scheme: dark) {
-      background-color: hsla(0, 0%, 0%, 0.2);
+      background-color: hsl(0deg 0% 0% / 20%);
     }
 
     .safe-focus &:focus,
     &:focus,
     &:hover {
-      box-shadow: inset 0 0 0 5px hsla(320, 80%, 45%, 1), 0 0.5rem 1rem hsla(208, 5%, 0%, 0.1);
+      box-shadow:
+        0 0 0 5px hsl(320deg 80% 45%) inset,
+        0 0.5rem 1rem hsl(208deg 5% 0% / 10%);
     }
   }
 
