--- a/assets/components/_button.css
+++ b/assets/components/_button.css
@@ -13,7 +13,11 @@
   text-shadow: 0 -1px var(--color-dark);
   color: var(--color-gray-1);
   background: linear-gradient(to bottom, var(--color-gray-4), var(--color-gray-5), var(--color-dark)) top left / 200% 200%;
-  box-shadow: inset 0 0 0 1px hsl(208, 5%, 15%), inset 0 2px hsla(208, 5%, 95%, 0.3), inset 0 -2px hsla(208, 5%, 5%, 1), 0 0.5rem 0.75rem -0.25rem hsla(208, 5%, 5%, 0.5);
+  box-shadow:
+    0 0 0 1px hsl(208deg 5% 15%) inset,
+    0 2px hsl(208deg 5% 95% / 30%) inset,
+    0 -2px hsl(208deg 5% 5%) inset,
+    0 0.5rem 0.75rem -0.25rem hsl(208deg 5% 5% / 50%);
   will-change: transform;
   transition:
     transform var(--animation-duration) ease-in-out,
@@ -24,7 +28,11 @@
     text-shadow: 0 1px var(--color-light);
     color: var(--color-gray-5);
     background: linear-gradient(to bottom, var(--color-light), var(--color-gray-2)) top 100% left / 200% 200%;
-    box-shadow: inset 0 0 0 1px hsl(208, 5%, 30%), inset 0 2px hsla(208, 5%, 95%, 0.8), inset 0 -2px hsla(208, 5%, 95%, 0.4), 0 0.5rem 0.75rem -0.25rem hsla(208, 5%, 5%, 0.5);
+    box-shadow:
+      0 0 0 1px hsl(208deg 5% 30%) inset,
+      0 2px hsl(208deg 5% 95% / 80%) inset,
+      0 -2px hsl(208deg 5% 95% / 40%) inset,
+      0 0.5rem 0.75rem -0.25rem hsl(208deg 5% 5% / 50%);
   }
 
   &:hover {
@@ -35,7 +43,11 @@
       color: var(--color-dark);
       text-shadow: 0 1px var(--color-light);
       background-position: top 0 left;
-      box-shadow: inset 0 0 0 1px hsl(208, 5%, 50%), inset 0 2px hsla(208, 5%, 95%, 0.8), inset 0 -2px hsla(208, 5%, 95%, 0.4), 0 0.5rem 0.75rem -0.25rem hsla(208, 5%, 5%, 0.5);
+      box-shadow:
+        0 0 0 1px hsl(208deg 5% 50%) inset,
+        0 2px hsl(208deg 5% 95% / 80%) inset,
+        0 -2px hsl(208deg 5% 95% / 40%) inset,
+        0 0.5rem 0.75rem -0.25rem hsl(208deg 5% 5% / 50%);
     }
   }
 
