--- a/assets/components/_footer.css
+++ b/assets/components/_footer.css
@@ -7,7 +7,7 @@
     margin: var(--space-lg) auto 0;
     padding: calc( var(--gradient-padding) * 2 ) 0 calc(var(--gradient-padding) * 0.5 ) ;
     background-color: var(--color-background);
-    mask-image: linear-gradient(2deg, black 50%, rgba(black, 0.5) calc(50% + 1px), rgba(black, 0.5) calc(50% + 9px), transparent calc(50% + 10px));
+    mask-image: linear-gradient(2deg, #000 50%, #0008 calc(50% + 1px), #0008 calc(50% + 9px), #0000 calc(50% + 10px));
   }
 
   p {
