--- a/assets/components/_logo.css
+++ b/assets/components/_logo.css
@@ -3,14 +3,21 @@
   height: calc((200 / 184) * var(--logo-size));
   position: relative;
   will-change: transform;
-  filter: drop-shadow(0 -1px 0 rgba(255, 255, 255, 0.3)) drop-shadow(0 1px 0 rgba(0, 0, 0, 0.3)) drop-shadow(0 4px 8px rgba(0, 0, 0, 0.3));
+  filter:
+    drop-shadow(0 -1px 0 #fff4)
+    drop-shadow(0 1px 0 #0004)
+    drop-shadow(0 4px 8px #0004);
 }
 .cmp-logo--shadow {
-  filter: drop-shadow(0 1em 1em rgba(0, 0, 0, 0.5)) drop-shadow(0 2em 4em rgba(0, 0, 0, 0.3));
+  filter:
+    drop-shadow(0 1em 1em #0008)
+    drop-shadow(0 2em 4em #0004);
 }
 @media (prefers-color-scheme: dark) {
   .cmp-logo--shadow {
-    filter: drop-shadow(0 0.125em 0.25em rgba(0, 0, 0, 0.75)) drop-shadow(0 0.5em 1em rgba(0, 0, 0, 0.5));
+    filter:
+      drop-shadow(0 0.125em 0.25em #000b)
+      drop-shadow(0 0.5em 1em #0008);
   }
 }
 .cmp-logo__top, .cmp-logo__bottom, .cmp-logo__diagonal {
@@ -24,13 +31,23 @@
 }
 .cmp-logo__top {
   mask-image: url(/assets/top.svg);
-  background: linear-gradient(138.5deg, rgba(110, 28, 19, 0) 36%, #6e1c13 46%), linear-gradient(138.5deg, rgba(132, 34, 23, 0) 35%, #842217 50%), linear-gradient(100deg, #ffc46c 10%, #ec8051 30%, #ab392b 60%, #842217 70%);
+  background:
+    linear-gradient(138.5deg, hsl(6deg 71% 25% / 0) 36%, hsl(6deg 71% 25%) 46%),
+    linear-gradient(138.5deg, hsl(6deg 70% 30% / 0) 35%, hsl(6deg 70% 30%) 50%),
+    linear-gradient(100deg, hsl(36deg 100% 71%) 10%, hsl(18deg 80% 62%) 30%, hsl(6deg 60% 42%) 60%, hsl(6deg 70% 30%) 70%);
 }
 .cmp-logo__bottom {
   mask-image: url(/assets/bottom.svg);
-  background: radial-gradient(circle at 100% 80%, var(--color-primary) 2%, rgba(158, 40, 130, 0) 35%), linear-gradient(318.5deg, rgba(13, 0, 9, 0) 36%, #0d0009 46%), linear-gradient(280deg, #802873 10%, #6e0064 30%, #26001c 60%);
+  background:
+    radial-gradient(circle at 100% 80%, var(--color-primary) 2%, hsl(314deg 60% 39% / 0) 35%),
+    linear-gradient(318.5deg, hsl(319deg 100% 3% / 0) 36%, hsl(319deg 100% 3%) 46%),
+    linear-gradient(280deg, hsl(309deg 52% 33%) 10%, hsl(305deg 100% 22%) 30%, hsl(316deg 100% 8%) 60%);
 }
 .cmp-logo__diagonal {
   mask-image: url(/assets/diagonal.svg);
-  background: radial-gradient(circle at 90% 5%, #eca76a 2%, rgba(236, 167, 106, 0) 30%), radial-gradient(circle at 25% 125%, #330627 0%, rgba(51, 6, 39, 0) 50%), radial-gradient(circle at 15% 100%, #780d5c 0%, rgba(120, 13, 92, 0) 30%), linear-gradient(41.5deg, var(--color-primary) 20%, var(--color-secondary) 70%);
+  background:
+    radial-gradient(circle at 90% 5%, hsl(28deg 77% 67%) 2%, hsl(28deg 77% 67% / 0) 30%),
+    radial-gradient(circle at 25% 125%, hsl(316deg 79% 11%) 0%, hsl(316deg 79% 11% / 0) 50%),
+    radial-gradient(circle at 15% 100%, hsl(316deg 81% 26%) 0%, hsl(316deg 81% 26% / 0) 30%),
+    linear-gradient(41.5deg, var(--color-primary) 20%, var(--color-secondary) 70%);
 }
