--- a/assets/components/_post-card.css
+++ b/assets/components/_post-card.css
@@ -5,30 +5,38 @@
   border-radius: var(--space-md);
   color: var(--color-text);
   background-color: hsl(208, 5%, 100%);
-  box-shadow: inset 0 0 0 2px hsla(0, 0%, 50%, 0.1), inset 0 0 0 1px hsl(0, 100%, 100%), inset 0 0 2rem hsla(208, 5%, 85%, 0.5), 0 2rem 2rem -1rem hsla(0, 0%, 0%, 0.5);
-   
+  box-shadow:
+    0 0 0 2px hsl(0deg 0% 50% / 10%) inset,
+    0 0 0 1px hsl(0deg 100% 100%) inset,
+    0 0 2rem hsl(208deg 5% 85% / 50%) inset,
+    0 2rem 2rem -1rem hsl(0deg 0% 0% / 50%);
+
   & + & {
     margin-top: calc(var(--gradient-padding) * 0.75);
   }
-  
+
   @media (min-width: $md) {
     padding: var(--space-lg);
   }
-  
+
   @media (prefers-color-scheme: dark) {
-    background-color: hsl(208, 5%, 15%);
-    box-shadow: inset 0 0 0 2px hsla(0, 0%, 50%, 0.1), inset 0 0 0 1px hsl(208, 5%, 15%), inset 0 0 2rem hsl(208, 5%, 15%), 0 2rem 2rem -1rem hsla(0, 0%, 0%, 0.5);
+    background-color: hsl(208deg 5% 15%);
+    box-shadow:
+      0 0 0 2px hsl(0deg 0% 50% / 10%) inset,
+      0 0 0 1px hsl(208deg 5% 15%) inset,
+      0 0 2rem hsl(208deg 5% 15%) inset,
+      0 2rem 2rem -1rem hsl(0deg 0% 0% / 50%);
   }
-  
+
   @supports (backdrop-filter: blur(1px)) {
     backdrop-filter: blur(2rem);
-    background-color: hsla(208, 5%, 100%, 0.9);
-  
+    background-color: hsl(208deg 5% 100% / 90%);
+
     @media (prefers-color-scheme: dark) {
-      background-color: hsla(208, 5%, 15%, 0.9); 
+      background-color: hsl(208deg 5% 15% / 90%);
     }
   }
- 
+
   &--micro {
     max-width: 60rem;
     margin-left: auto;
@@ -36,8 +44,8 @@
   }
 
   & + & {
-    border-top: 1px solid hsla(0, 0%, 100%, 0.1);
-    box-shadow: 0 -1px hsla(0, 0%, 0%, 0.6);
+    border-top: 1px solid hsl(0deg 0% 100% / 10%);
+    box-shadow: 0 -1px hsl(0deg 0% 0% / 60%);
     padding-top: 8rem;
     margin-top: 8rem;
   }
