--- a/assets/components/_projects-list.css
+++ b/assets/components/_projects-list.css
@@ -15,12 +15,20 @@
     align-items: stretch;
     width: 100%;
     border-radius: var(--space-md);
-    background-color: hsl(208, 5%, 100%);
-    box-shadow: inset 0 0 0 2px hsla(0, 0%, 50%, 0.1), inset 0 0 0 1px hsl(0, 100%, 100%), inset 0 0 2rem hsla(208, 5%, 85%, 0.5), 0 2rem 2rem -1rem hsla(0, 0%, 0%, 0.5);
+    background-color: hsl(208deg 5% 100%);
+    box-shadow:
+      inset 0 0 0 2px hsl(0deg 0% 50% / 10%),
+      inset 0 0 0 1px hsl(0deg 100% 100%),
+      inset 0 0 2rem hsl(208deg 5% 85% / 50%),
+      0 2rem 2rem -1rem hsl(0deg 0% 0% / 50%);
 
     @media (prefers-color-scheme: dark) {
       background-color: hsl(208, 5%, 15%);
-      box-shadow: inset 0 0 0 2px hsla(0, 0%, 50%, 0.1), inset 0 0 0 1px hsl(208, 5%, 15%), inset 0 0 2rem hsl(208, 5%, 15%), 0 2rem 2rem -1rem hsla(0, 0%, 0%, 0.5);
+      box-shadow:
+        inset 0 0 0 2px hsl(0deg 0% 50% / 10%),
+        inset 0 0 0 1px hsl(208deg 5% 15%),
+        inset 0 0 2rem hsl(208deg 5% 15%),
+        0 2rem 2rem -1rem hsl(0deg 0% 0% / 50%);
     }
   }
 
@@ -92,16 +100,16 @@
   &__heading {
     margin: 0;
     font-size: var(--font-md);
-    text-shadow: 0 0.25em 0.5em hsla(0,100%,30%,0.8);
+    text-shadow: 0 0.25em 0.5em hsl(0deg 100% 30% / 80%);
   }
 
   &__description {
-    text-shadow: 0 0.25em 0.5em hsla(0,100%,30%,0.8);
+    text-shadow: 0 0.25em 0.5em hsl(0deg 100% 30% / 80%);
   }
 
   &__tasks,
   &__links {
-    text-shadow: 0 0.25em 0.5em hsla(0,100%,30%,0.8);
+    text-shadow: 0 0.25em 0.5em hsl(0deg 100% 30% / 80%);
     list-style: none;
     margin: 0;
     padding: 0;;
