--- a/assets/components/_site-header.css
+++ b/assets/components/_site-header.css
@@ -15,7 +15,13 @@
   }
 
   &--mask {
-    mask-image: linear-gradient(178deg, black 50%, rgba(black, 0.5) calc(50% + 1px), rgba(black, 0.5) calc(50% + 9px), transparent calc(50% + 10px));
+    mask-image:
+      linear-gradient(
+        178deg,
+        #000 50%,
+        #0008 calc(50% + 1px),
+        #0008 calc(50% + 9px),
+        #0000 calc(50% + 10px));
   }
 
   &__logo {
