--- a/assets/components/_video-list.css
+++ b/assets/components/_video-list.css
@@ -26,8 +26,10 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    background-color: hsla(208, 5%, 100%, 0.8);
-    box-shadow: inset 0 0 0 0 hsla(320, 80%, 45%, 0.3), 0 0.5rem 1rem hsla(208, 5%, 0%, 0.1);
+    background-color: hsl(208deg 5% 100% / 80%);
+    box-shadow:
+      0 0 0 0 hsl(320deg 80% 45% / 30%) inset,
+      0 0.5rem 1rem hsl(208deg 5% 0% / 10%);
     padding: var(--space-md);
     border-radius: var(--space-sm);
     color: var(--color-text);
@@ -35,19 +37,21 @@
     will-change: opacity;
 
     @media (prefers-color-scheme: dark) {
-      background-color: hsla(0, 0%, 0%, 0.4);
+      background-color: hsl(0deg 0% 0% / 40%);
     }
 
     .safe-focus &:focus,
     &:focus,
     &:hover {
-      box-shadow: inset 0 0 0 5px hsla(320, 80%, 45%, 1), 0 0.5rem 1rem hsla(208, 5%, 0%, 0.1);
+      box-shadow:
+        0 0 0 5px hsl(320deg 80% 45%) inset,
+        0 0.5rem 1rem hsl(208deg 5% 0% / 10%);
     }
   }
 
   &__image {
     display: block;
-    border: 1px solid hsla(0, 0%, 0%, 0.7);
+    border: 1px solid hsl(0deg 0% 0% / 70%);
     border-radius: var(--space-1xs);
   }
 
