--- a/assets/object/_gradient.css
+++ b/assets/object/_gradient.css
@@ -63,7 +63,7 @@
     0 0 0 2px hsl(0deg 0% 50% / 10%) inset,
     0 0 0 1px hsl(0deg 100% 100%) inset,
     0 0 2rem hsl(208deg 5% 85% / 50%) inset,
-    0 2rem 2rem -1rem hsla(0deg 0% 0% / 50%);
+    0 2rem 2rem -1rem hsl(0deg 0% 0% / 50%);
 
 
   @media (min-width: $md) {
@@ -77,7 +77,7 @@
       0 0 0 2px hsl(0deg 0% 50% / 10%) inset,
       0 0 0 1px hsl(208deg 5% 15%) inset,
       0 0 2rem hsl(208deg 5% 15%) inset,
-      0 2rem 2rem -1rem hsla(0deg 0% 0% / 50%);
+      0 2rem 2rem -1rem hsl(0deg 0% 0% / 50%);
   }
 
   @supports (backdrop-filter: blur(1px)) {
@@ -85,7 +85,7 @@
     background-color: hsl(208deg 5% 100% / 90%);
 
     @media (prefers-color-scheme: dark) {
-      background-color: hsla(208deg 5% 15% / 90%);
+      background-color: hsl(208deg 5% 15% / 90%);
     }
   }
 }
