feat: Add Mastodon link

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -8,6 +8,6 @@
     <p>Hi! I’m Philip. I’m an experienced frontend designer and developer at <a href="https://seesparkbox.com/">Sparkbox</a> with a passion for bridging design and development with a focus on HTML, CSS, and Accessibility. I’m even a certified Web Accessibility Specialist!</p>
     <p>I’ve helped teach and train many designers and developers through the <a href="http://apprentices.seesparkbox.com/">Sparkbox apprenticeship programs</a>, the <a href="http://buildright.io/modern-css">Build Right workshop series</a>, and at both local and industry events.</p>
     <p>My writing on various web topics can be found on the <a href="http://seesparkbox.com/foundry/author/philip_zastrow">Sparkbox Foundry</a> or on <a href="/writing">my website</a>. I also have a <a href="https://www.digitalocean.com/community/tutorial_series/how-to-style-html-with-css">tutorial series on CSS</a> on the <a href="https://www.digitalocean.com/community">DigitalOcean Community</a> site.</p>
-    <p>Also, I’m always looking for a <a href="https://www.goodreads.com/user/show/5992363-philip-zastrow">good book</a> to&nbsp;read. Recommendations welcomed!</p>
+    <p>I’m always looking for a <a href="https://www.goodreads.com/user/show/5992363-philip-zastrow">good book</a> to&nbsp;read. Lately, I hang out around the <a rel="me" href="https://mastodon.social/@zastrow">Fediverse</a>.</p>
   </div>
 </div>
