feat: Add dynamic footer copyright

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,11 @@
 <footer class="cmp-footer{{ if ( ne .Kind "home") }} cmp-footer--mask{{ end }}">
   <p>
-    <span aria-label="Copyright">&copy;</span> 2012<span aria-label=" through ">&ndash;</span>{{ now.Format "2006"}} Philip Zastrow. All rights reserved.
+    <span aria-label="Copyright">&copy;</span> 2012<span aria-label=" through ">&ndash;</span><span class="now">{{ now.Format "2006"}}</span> Philip Zastrow. All rights reserved.
   </p>
-  <p>Made in <a href="https://cottonbureau.com/products/ohio-4">oHIo</a></p>
+  <p>Made in <a href="https://cottonbureau.com/products/ohio-4">Ohio</a></p>
+  <script>
+    const x = new Date().getFullYear();
+    const e = document.querySelector('.now');
+    e.innerText = (x >= Number(e.innerText)) ? x : e.innerText;
+  </script>
 </footer>
