--- a/assets/elements/_root.css
+++ b/assets/elements/_root.css
@@ -13,7 +13,8 @@
 
   /* Other Props */
   --gradient-padding: 10rem;
-  --gradient: linear-gradient(170deg,
+  --deg: 170deg;
+  --gradient: linear-gradient(var(--deg),
     var(--color-tertiary) 0%,
     var(--color-secondary) 10%,
     var(--color-primary) 75%,
