--- a/layouts/_default/articles.html
+++ b/layouts/_default/articles.html
@@ -3,17 +3,26 @@
     <div class="obj-gradient-block">
       <div class="obj-gradient-block__interior">
         <div class="obj-width-listing">
-          <div class="cmp-post">
+          <div class="obj-gradient-block__content">
+            <header>
+              <h1 class="cmp-title">{{.Title}}</h1>
+              {{if .Content}}
+              <div>
+                {{.Content}}
+              </div>
+              {{end}}
+            </header>
             {{ range $.Site.Data.external_articles }}
               <div class="cmp-article-item">
                 <h2 class="cmp-article-item__title">
-                  <a href="{{ .link }}">
+                  <a class="cmp-article-item__link" href="{{ .link }}">
                     {{ .title }}
                   </a>
                 </h2>
                 <p class="cmp-article-item__meta">
-                  <time datetime="{{ .date }}">{{ .date  }}</time>
-                  <span>
+                  {{ $date := time (.date)}}
+                  <time datetime="{{time.Format "2006-01-02" $date}}" class="cmp-article-item__date">{{ time.Format "2 January 2006" $date }}</time>
+                  <span class="cmp-article-item__source">
                     {{ .source }}
                   </span>
                 </p>
