--- a/layouts/partials/external-articles-list.html
+++ b/layouts/partials/external-articles-list.html
@@ -17,4 +17,4 @@
   {{ end }}
 </ul>
 
-<a href="/writing" class="cmp-button">More Articles</a>
+<a href="/articles" class="cmp-button">More Articles</a>
