--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -1,4 +1,4 @@
-<div class="obj-width-limiter">
+<div class="obj-width-listing">
   <div class="cmp-site-header cmp-site-header--home">
     <a href="/" class="cmp-site-header__logo" rel="home" aria-hidden="true">
       <div class="cmp-logo">
