--- a/assets/components/_about.css
+++ b/assets/components/_about.css
@@ -10,20 +10,25 @@
 .cmp-about {
   display: grid;
   gap: 4rem;
-  
+
   @media (min-width: $lg) {
     grid-template-columns: 1fr 3fr;
     align-items: center;
   }
-  
+
   &__content {
     font-size: var(--font-md);
     max-width: 70ch;
   }
-  
+
   &__image {
     will-change: transform;
+    aspect-ratio: 480 / 704;
     max-width: 20rem;
+    mask-image: url('/images/face.svg');
+    mask-position: 1px 1px;
+    mask-repeat: no-repeat;
+    mask-size: calc(100% - 2px) auto;
     animation: wiggly-z 6s ease-in-out alternate infinite;
     filter: saturate(110%) contrast(110%) drop-shadow(0 6px 8px rgba(black,0.8)) drop-shadow(0 1rem 4rem rgba(black,0.6));
   }
