--- a/assets/components/_about.css
+++ b/assets/components/_about.css
@@ -21,15 +21,19 @@
     max-width: 70ch;
   }
 
-  &__image {
+  &__image-container {
     will-change: transform;
+    animation: wiggly-z 6s ease-in-out alternate infinite;
+    filter: drop-shadow(0 6px 8px hsl(0deg 0% 0% / 80%)) drop-shadow(0 1rem 4rem hsl(0deg 0% 0% / 60%));
+  }
+
+  &__image {
     aspect-ratio: 480 / 704;
     max-width: 20rem;
     mask-image: url('/images/face.svg');
     mask-position: 1px 1px;
     mask-repeat: no-repeat;
     mask-size: calc(100% - 2px) auto;
-    animation: wiggly-z 6s ease-in-out alternate infinite;
-    filter: saturate(110%) contrast(110%) drop-shadow(0 6px 8px rgba(black,0.8)) drop-shadow(0 1rem 4rem rgba(black,0.6));
+    filter: saturate(110%) contrast(110%);
   }
 }
